Bug 452070 - gocryptfs doesn't mount on dolphin like cryfs or encfs
Summary: gocryptfs doesn't mount on dolphin like cryfs or encfs
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: HI normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-30 08:01 UTC by deresiant
Modified: 2022-04-01 19:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.93
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description deresiant 2022-03-30 08:01:28 UTC
After unlocking a vault encrypted with gocryptfs. Dolphin doesn't put it under the "devices" section on the sidebar. Not sure if this is a dolphin or plasma vaults issue.


STEPS TO REPRODUCE
1. Make a gocryptfs encrypted vault
2. unlock it

OBSERVED RESULT
Dolphin does not show it under "devices" section in the sidebar

EXPECTED RESULT
Dolphin should show it on the sidebar under the "devices" section just like encfs and cryfs

Operating System: Arch Linux
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.17.1-249-tkg-pds (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 550 / 550 Series
Comment 1 Nate Graham 2022-04-01 18:25:15 UTC
Can reproduce. I think it's because gocryptfs decrypts in place with an overlay filesystem rather than using an explicit mount. Or something like that.

So either Vaults needs to make a temporary item in the Places panel for it, or else we need to teach Solid about gocryptfs overlay filesystems. Not sure which one.
Comment 2 Ivan Čukić 2022-04-01 19:38:35 UTC
It is a solid thing. Will be fixed soon.
Comment 3 Ivan Čukić 2022-04-01 19:40:41 UTC
@Nate - this is a 15 minute bug :)
Comment 4 Nate Graham 2022-04-01 19:52:11 UTC
Cool!
Comment 5 Nate Graham 2022-04-01 19:57:19 UTC
Git commit 6b0ae19f5ff4b9c38ba7f27a8e06ae3e8535bb3a by Nate Graham, on behalf of Ivan Čukić.
Committed on 01/04/2022 at 19:57.
Pushed by ngraham into branch 'master'.

Recognize fuse.gocryptfs mounts as devices like we do for cryfs and encfs
FIXED-IN: 5.93

M  +1    -1    src/solid/devices/backends/fstab/fstabdevice.cpp
M  +1    -0    src/solid/devices/backends/fstab/fstabhandling.cpp

https://invent.kde.org/frameworks/solid/commit/6b0ae19f5ff4b9c38ba7f27a8e06ae3e8535bb3a
Comment 6 Nate Graham 2022-04-01 19:58:33 UTC
Well that was fast!!