Recognize fuse.gocryptfs mounts as devices like we do for cryfs and encfs

BUG: 452070
FIXED-IN: 5.93